Included new status bar & excluded jPowerShell dependencie